<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

        <item
            android:id="@+id/navigationMenuUser"
            android:title="@string/str_menu_user_title">

            <menu>

                <group
                    android:id="@+id/navigationGroupUser"
                    android:checkableBehavior="single">

                    <item
                        android:id="@+id/navigationMenuMap"
                        android:icon="@drawable/ic_menu_map"
                        android:title="@string/str_menu_map" />

                    <!--<item
                        android:id="@+id/navigationMenuSearch"
                        android:icon="@drawable/ic_menu_search"
                        android:title="@string/str_menu_search" />-->

                    <item
                        android:id="@+id/navigationMenuFavorites"
                        android:icon="@drawable/ic_menu_favorites"
                        android:title="@string/str_menu_favorites" />

                    <item
                        android:id="@+id/navigationMenuSettings"
                        android:icon="@drawable/ic_menu_settings"
                        android:title="@string/str_menu_settings" />

                    <item
                        android:id="@+id/navigationMenuInformation"
                        android:icon="@drawable/ic_menu_information"
                        android:title="@string/str_menu_information" />

                </group>

            </menu>

        </item>

        <item
            android:id="@+id/navigationMenuAgency"
            android:title="@string/str_menu_agency_title">

            <menu>

                <group
                    android:id="@+id/navigationGroupAgency"
                    android:checkableBehavior="single">

                    <!--
                    <item
                        android:id="@+id/navigationMenuPlaceholder"
                        android:icon="@drawable/ic_menu_map"
                        android:title="@string/str_menu_map" />
                        -->

                    <item
                        android:id="@+id/navigationMenuReset"
                        android:icon="@drawable/ic_menu_reset"
                        android:title="@string/str_menu_reset" />

                </group>

            </menu>

        </item>

</menu>