<?xml version="1.0" encoding="utf-8" ?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/str_preferences_cat_search">

        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="KEY_WHEELCHAIR_ACCESSIBLE"
            android:title="@string/str_preferences_wheelchair_accessible"
            android:icon="@drawable/ic_wheelchair"
            android:defaultValue="false" />

        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="KEY_BIKES_ALLOWED"
            android:title="@string/str_preferences_bikes_allowed"
            android:icon="@drawable/ic_bike"
            android:defaultValue="false" />

    </android.support.v7.preference.PreferenceCategory>

    <!--<android.support.v7.preference.PreferenceCategory
        android:title="@string/str_preferences_cat_view">



    </android.support.v7.preference.PreferenceCategory>-->

</android.support.v7.preference.PreferenceScreen>